:bug: fix border-collapse

--- a/packages/docs/src/styles/tokens-grid.css
+++ b/packages/docs/src/styles/tokens-grid.css
@@ -1,8 +1,8 @@
 .tokens-grid {
   width: 100%;
   font-family: sans-serif;
-  color: #fff;
-  border-colapse: collapse;
+  color:  #fff;
+  border-collapse: collapse;
 }
 
 .tokens-grid thead th {
@@ -10,7 +10,7 @@
   text-align: left;
 }
 
-.tokens-grid body td {
+.tokens-grid tbody td {
   padding: 0.75rem 1rem;
   text-align: #ccc;
 }
